# elementary_simulations

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: 0_simulation.cpp  1_periodic_wave.cpp  1_wave_periodic.cpp  2_boundary_conditions.cpp  3_charged_particle.cpp  3_charged_particle.cpp.bak  4_charged_particle_ret.cpp  framework.cpp  framework.hpp  simulation.cpp  slider.cpp  slider.hpp
